Added new V2 API's

--- a/TurfManager/Views/SummaryView/Index.cshtml
+++ b/TurfManager/Views/SummaryView/Index.cshtml
@@ -60,45 +60,65 @@
                 @{ switch (item.summaryAction)
                     {
                         case 1:
-            <div class="actionstyle">
-                <img alt="PGR" src="~/images/pgr.png" width="32" height="32" />PGR
-            </div>
-            break;
-        case 2:
-            <div class="actionstyle">
-                <img alt="Mow" src="~/images/mow.png" width="32" height="32" />Mow
-            </div>
-            break;
+                            <div class="actionstyle">
+                                <img alt="PGR" src="~/images/pgr.png" width="32" height="32" />PGR
+                            </div>
+                            break;
+                        case 2:
+                            <div class="actionstyle">
+                                <img alt="Mow" src="~/images/mow.png" width="32" height="32" />Mow
+                            </div>
+                            break;
 
-        case 3:
-            <div class="actionstyle">
-                <img alt="Fert" src="~/images/fert.png" width="32" height="32" />Fert
-            </div>
-            break;
-        case 4:
-            <div class="actionstyle">
-                <img alt="Wetter" src="~/images/wetter.png" width="32" height="32" />Wetter
-            </div>
-            break;
+                        case 3:
+                            <div class="actionstyle">
+                                <img alt="Fert" src="~/images/fert.png" width="32" height="32" />Fert
+                            </div>
+                            break;
+                        case 4:
+                            <div class="actionstyle">
+                                <img alt="Wetter" src="~/images/wetter.png" width="32" height="32" />Wetter
+                            </div>
+                            break;
 
-        case 5:
-            <div class="actionstyle">
-                <img alt="Seaweed" src="~/images/seaweed.png" width="32" height="32" />Seaweed
-            </div>
-                                    break;
-                                case 6:
-            <div class="actionstyle">
-                <img alt="Iron" src="~/images/iron.png" width="32" height="32" />Iron Chelate
-            </div>
-                                    break;
-                                case 7:
-            <div class="actionstyle">
-                <img alt="Barricade" src="~/images/barricade.png" width="32" height="32" />Barricade
-            </div>
-         break;
+                        case 5:
+                            <div class="actionstyle">
+                                <img alt="Seaweed" src="~/images/seaweed.png" width="32" height="32" />Seaweed
+                            </div>
+                            break;
+                        case 6:
+                            <div class="actionstyle">
+                                <img alt="Iron" src="~/images/iron.png" width="32" height="32" />Iron Chelate
+                            </div>
+                            break;
+                        case 7:
+                            <div class="actionstyle">
+                                <img alt="Barricade" src="~/images/barricade.png" width="32" height="32" />Barricade
+                            </div>
+                            break;
+                        case 8:
+                            <div class="actionstyle">
+                                <img alt="Knife" src="~/images/knife.png" width="32" height="32" />Knife+
+                            </div>
+                            break;
+                        case 9:
+                            <div class="actionstyle">
+                                <img alt="Protesyn" src="~/images/sunshine.png" width="32" height="32" />Protesyn
+                            </div>
+                            break;
+                        case 10:
+                            <div class="actionstyle">
+                                <img alt="Baythroid" src="~/images/baythroid.png" width="32" height="32" />Baythroid
+                            </div>
+                            break;
+                        case 11:
+                            <div class="actionstyle">
+                                <img alt="Bifenthrin" src="~/images/bifenthrin.png" width="32" height="32" />Bifenthrin
+                            </div>
+                            break;
 
                     }
-                    }
+                }
             </td>
 
 
