--- a/TurfManager/Views/SummaryView/Index.cshtml
+++ b/TurfManager/Views/SummaryView/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TurfManager.Models.SummaryViewModel>
+﻿@model IEnumerable<TurfManager.Models.SummaryView>
 
 @{
     ViewData["Title"] = "Index";
