--- a/TurfManager/Views/Shared/_Layout.cshtml
+++ b/TurfManager/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                         </li>
                     </ul>
                 </div>
+                GDD: 
             </div>
         </nav>
     </header>
