--- a/TurfManager/Views/SummaryView/Index.cshtml
+++ b/TurfManager/Views/SummaryView/Index.cshtml
@@ -103,7 +103,7 @@
                             break;
                         case 9:
                             <div class="actionstyle">
-                                <img alt="Protesyn" src="~/images/sunshine.png" width="32" height="32" />Protesyn
+                                <img alt="Protesyn" src="~/images/protesyn.png" width="32" height="32" />Special Mix
                             </div>
                             break;
                         case 10:
