--- a/TurfManager/Views/Shared/_Layout.cshtml
+++ b/TurfManager/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - TurfManager
+            &copy; 2022 - TurfManager v2.1
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
