--- a/TurfManager/Views/Shared/_Layout.cshtml
+++ b/TurfManager/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - TurfManager v2.1
+            &copy; 2022 - 2024 TurfManager v2.2 (NET8.0)
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
