fix up net8 jwt bugs

--- a/TurfManager/Views/Shared/_Layout.cshtml
+++ b/TurfManager/Views/Shared/_Layout.cshtml
@@ -48,11 +48,15 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - 2024 TurfManager v2.2 (NET8.0)
+            @using Microsoft.Extensions.Configuration
+    @inject IConfiguration Configuration
+    @Configuration.GetSection("Jwt")["Key"]
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+    
 </body>
 </html>
